[package]
name = "ruinia_roguelike"
authors = ["Kazbek Brtsiev <brtsievkazbek@yandex.ru>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
bracket-lib = "0.8.1"
iyes_loopless = "0.5.1"
ron = "0.6.1"
serde = "1.0.115"